# tinyurl

./: .gitignore  README.md  manage.py  pyproject.toml
requirements/: requirements-tests.txt
tests/tinyurl/: test_link_resolution_view.py  test_link_view.py
tinyurl/: admin.py  apps.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
tinyurl/migrations/: 0001_initial.py
tinyurl/settings/: base.py  tests.py
