[project]
name = "tinyurl"
version = "0.1.0"
description = "Aplikacja REST do skracania urli."
readme = "README.md"
requires-python = ">=3.13.2"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["tinyurl"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.txt"] }

[tool.black]
line-length = 100
target-version = ["py313"]

[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE = "tinyurl.settings.tests"
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
